# substrate-eth-account

core-primitives/: Cargo.toml
core-primitives/src/: lib.rs
node/: Cargo.toml
node/src/: account_keys.rs  benchmarking.rs  chain_spec.rs  command.rs  lib.rs  main.rs
pallets/template/src/: lib.rs
primitives/account/: Cargo.toml
primitives/account/src/: lib.rs
runtime/: Cargo.toml
runtime/common/: Cargo.toml
runtime/common/src/: apis.rs  lib.rs
runtime/src/: lib.rs
