[package]
name = "hamster-core-primitives"
edition = "2021"
version = "0.1.1"

[dependencies]
account = { path = "../primitives/account", default-features = false }

sp-core = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
sp-runtime = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }

[features]
default = [ "std" ]
std = [
    "account/std",
    "sp-core/std",
    "sp-runtime/std",
]
