[package]
name = "account"
authors = [ "Hamster" ]
edition = "2021"
license = "GPL-3.0-only"
version = "0.1.1"

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu" ]

[dependencies]
blake2-rfc = { version = "0.2.18", optional = true, default-features = false }
hex = { version = "0.4", default-features = false }
impl-serde = { version = "0.4.0", default-features = false }
libsecp256k1 = { version = "0.7.1", default-features = false, features = [ "hmac" ] }
log = "0.4"
serde = { version = "1.0.101", optional = true, default-features = false, features = [ "derive" ] }
sha3 = { version = "0.10.6", default-features = false }

# Substrate
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }

[dev-dependencies]
hex = "0.4.3"

[features]
default = [ "std" ]
std = [
	"full_crypto",
	"hex/std",
	"impl-serde/std",
	"libsecp256k1/std",
	"serde/std",
	"sha3/std",
	"codec/std",
	"frame-support/std",
	"frame-system/std",
]

full_crypto = [
	"blake2-rfc",
]
